# neographics

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE
contrib/pebble_env/: pebble.c  pebble.h
contrib/test/: stb_impl.c  test.h  test_test.h  testrunner.c
contrib/testrunner_pc/: resources.c  ressources.c  stb_impl.c  testrunner.c  testrunner.h  tests.c  utils.c
docs/: DoxygenLayout.xml  circle_8h_source.html  color_8h_source.html  colors_8h_source.html  common_8h_source.html  context_8h_source.html  cornermask_8h_source.html  deprecated.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.html  dir_275a9c2c0735d30da05f3a83921d3b33.html  dir_5ab0182eb3fe8e3353795cff06375cda.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bbf56bce9985720f86fc476f3812db24.html  dir_bec663b67e4420d39ecb45ef100bdbac.html  dir_f49ec997a492e65ccf1048e50b0da7fd.html  draw__command_8h_source.html  fonts_8h_source.html  graphics_8h_source.html  group___color.html  group___color.js  group___corner_mask.html  group___corner_mask.js  group___definitions.html  group___line.html  group___point.html  group___point.js  group___size.html  group___size.js  group___types.html  group___types.js  group__circle.html  group__circle.js  group__context.html  group__context.js  group__draw__command.html  group__draw__command.js  group__fonts.html  group__fonts.js  group__low-level.html  group__path.html  (+57 more)
docs/html/: colors_8h_source.html  dir_0c0c9fa8a58db41e576adc3ce68c5ee9.html  graphics_8h_source.html  group___color.html  group___color.js  group___draw_command.html  group___draw_command.js  group___line.html  group___line.js  group___rect.html  group___rect.js  group___rectangle.html  group___rectangle.js  group___size.html  group___types.html  group__circle.html  group__draw__command.js  group__low-level.html  group__low-level.js  group__macros.html  group__typerect.html  index.html  md_readme.html  modules.js  navtreedata.js  navtreeindex0.js  path_8h_source.html  primitives_2rect_8h_source.html  size_8h_source.html  structn___g_context-members.html  structn___g_draw_command-members.html  structn___g_draw_command.html  structn___g_draw_command_flags-members.html  structn___g_draw_command_flags.html  structn___g_draw_command_frame-members.html  structn___g_draw_command_frame.html  structn___g_draw_command_list.html  structn___g_draw_command_sequence-members.html  structn___g_draw_command_sequence.html  structn___g_path_info-members.html  (+6 more)
doxygen/: header.html  styles.css
src/: common.c  common.h  context.c  context.h  graphics.h  macros.h  types.h
src/draw_command/: draw_command.c  draw_command.h
src/fonts/: fonts.c  fonts.h
src/gbitmap/: blit.h  blit_bw.c  blit_color.c  gbitmap.c  gbitmap.h
src/path/: path.c  path.h
src/primitives/: circle.c  circle.h  line.c  line.h  rect.c  rect.h
src/text/: text.c  text.h
src/types/: color.h  colors.h  cornermask.h  point.h  rect.c  rect.h  size.h
test/: test.h  test_blit.h  test_gbitmap.h  test_test.h  test_types.h  tests.h
